css/style.css
/* ... */
.q__and__a .answer {
    max-width: 100%;
    margin: .7em 0 1em 0;
    font-family: var(--inter);
    font-weight: 500;
    font-size: .9em;
    color: var(--dark-gray);
}

.q__and__a .answer {
    max-height: 0px;
    overflow: hidden;
    transition: max-height 1s ease;
    text-align: justify;
}

.q__and__a.active .answer {
    max-height: 300px;
}

@media screen and (max-width:1280px) {

    .faq__image {
        grid-column: 1/13;
        display: grid;
        place-items: center;
    }

    .faq__image img {
        width: 50%;
    }

    .faq__content {
        grid-column: 1/13;
    }
}

@media screen and (max-width:700px) {



    .FAQ .faq__content .title {
        font-size: 1.8em;
    }

    .faq__image img {
        width: 70%;
        margin-bottom: 2em;
    }
}

/* footer */

footer {
    margin-top: 7%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: var(--bg-4);
    border-top: 2px solid var(--border);
    padding: 2em;
}

footer .footer__logo {
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: var(--inter);
    font-size: 1em;
    font-weight: 600;
    color: var(--primary);
}

.footer__logo img {
    width: 25px;
    margin-right: 5px;
}

.footer__links {
    margin-top: 1em;
}

.footer__links a {
    color: var(--dark);
    font-size: 1em;
    font-family: var(--roboto);
}

